@@ -4,10 +4,6 @@ import java.io.IOException;
 import java.net.MalformedURLException;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 
 import be.webfactor.c3s.controller.exception.PageNotFoundException;
 import be.webfactor.c3s.controller.helper.apm.ApmTrackerService;
@@ -24,6 +20,8 @@ import be.webfactor.c3s.form.FormHandler;
 import be.webfactor.c3s.form.FormHandlerFactory;
 import be.webfactor.c3s.form.FormParams;
 import be.webfactor.c3s.master.domain.Form;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
@@ -159,7 +157,8 @@ public class PageController {
 	}
 
 	private String getBestMatchingLanguage(HttpServletRequest request, List<Locale> siteLocales) {
-		List<String> siteLanguages = siteLocales.stream().map(Locale::getLanguage).distinct().collect(Collectors.toList());
+		List<String> siteLanguages = siteLocales.stream().map(Locale::getLanguage).distinct().toList();
+
 		return Collections.list(request.getLocales()).stream()
 				.filter(locale -> siteLanguages.contains(locale.getLanguage()))
 				.findFirst().orElse(siteLocales.get(0)).getLanguage();
